@@ -1,2 +1,2 @@
-*Bateria de pruebas
+*Bateria de pruebas en curso
 
