@@ -7,6 +7,7 @@ Added SamRam Gerton Lunter interface emulation
 Added ZRCP commands:
 -realtape-open
 Added alternate Jupiter ACE rom: TODO: description
+Added another fourth easter egg ;)
 
 Improved CPC emulation: 
 -Video scanlines rendering
